--- a/public/painel.html
+++ b/public/painel.html
@@ -9,12 +9,13 @@
     *{box-sizing:border-box;margin:0;padding:0}
     html,body,#map{height:100%}
     #idBox{position:absolute;top:10px;left:10px;z-index:1000;background:#fff;padding:6px 10px;border-radius:4px;font-family:sans-serif;font-size:14px}
+    #batBox{position:absolute;top:10px;right:10px;z-index:1000;background:#fff;padding:6px 10px;border-radius:4px;font:14px sans-serif}
   </style>
-  <!-- favicon dinâmico -->
   <link id="favicon" rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='40' fill='%2334b7f1'/></svg>">
 </head>
 <body>
   <div id="idBox">ID: <span id="idShow">demo1</span></div>
+  <div id="batBox"><span id="batVal">--</span>% <span id="chg">🔋</span></div>
   <div id="map"></div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -28,14 +29,26 @@
       favicon.href = `data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='40' fill='${color}'/></svg>`;
     }
 
+    // bateria
+    navigator.getBattery().then(bat=>{
+      function updateBat(){
+        document.getElementById("batVal").textContent = Math.round(bat.level*100);
+        document.getElementById("chg").textContent = bat.charging ? "🔌" : "🔋";
+      }
+      updateBat();
+      bat.addEventListener('levelchange',updateBat);
+      bat.addEventListener('chargingchange',updateBat);
+    });
+
+    // mapa
     if (!navigator.geolocation) {
       alert("Geolocalização indisponível");
     } else {
       navigator.geolocation.watchPosition(
         pos => {
           const {latitude: lat, longitude: lng} = pos.coords;
-          setFav('#34b7f1');                  // azul ao atualizar
-          setTimeout(()=>setFav('#ffffff'),800); // branco depois
+          setFav('#34b7f1');
+          setTimeout(()=>setFav('#ffffff'),800);
           if (!window.mapInstance) {
             window.mapInstance = L.map("map").setView([lat, lng], 17);
             L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
